# esp-idf-inertial-saber

./: .clangd  .gitignore  CMakeLists.txt  GEMINI.md  README.md  test_audio.js  test_audio2.js  test_audio3.js  test_main.js
.agents/rules/: 01-project-instructions.md
.agents/workflows/: git_commit.md  git_create_branch.md  git_rebase_main.md  git_squash_commits.md  git_submit_pr.md  skill_create_sample.md  skill_hardware_validation.md  skill_verify_implementation.md  sync_components.md  template_sync.md
.github/workflows/: deploy-simulator.yml  sync-wiki.yml
components/audio/: README.md
components/audio_channel/: AudioChannel.cpp
components/audio_engine/: AudioEngine.cpp
components/gpio_button/: CMakeLists.txt  GpioButton.cpp  README.md
components/mpu6050/: CMakeLists.txt  Mpu6050.cpp  README.md
components/rgb_led/: CMakeLists.txt  README.md  RgbLed.cpp  idf_component.yml
components/sd_card/: CMakeLists.txt  README.md  sd_card.cpp
components/smart_led/: CMakeLists.txt  Canvas.cpp  Engine.cpp  LedStrip.cpp  README.md
components/smart_led/effects/: Breathe.cpp  Chase.cpp  Flash.cpp  RainbowCycle.cpp  SolidColor.cpp
components/smart_led/include/: Canvas.hpp  Effects.hpp  Engine.hpp  IEffect.hpp  LedStrip.hpp  SmartLed.hpp  SmartLedTypes.hpp
components/smart_led/include/effects/: Breathe.hpp  Chase.hpp  Flash.hpp  RainbowCycle.hpp  SolidColor.hpp
docs/simulator/: index.html  style.css
docs/system_definition/: InertialLight_Simulation.html  InertialLight_Specs.md  Profiles.md  (+3 more)
main/: CMakeLists.txt  SaberSystem.cpp  SaberSystem.hpp  main.cpp
(+58 files in other folders)
